tests/errors/int_no_method.vt
fn main() { let n: int = 5; print(n.foo()); }
